examples/acme/worker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: onify-worker
    name: onify-worker
  name: onify-worker
  namespace: onify-citizen-test
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: onify-worker
      task: onify-worker
  serviceName: onify-worker
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: onify-worker
        task: onify-worker
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - worker
          image: eu.gcr.io/onify-images/hub/api:infra-node-20
          imagePullPolicy: Always
          name: onify-worker
          ports:
            - containerPort: 8181
              name: onify-worker
              protocol: TCP
      imagePullSecrets:
        - name: onify-regcred
