examples/acme/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onify-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - onify-citizen-test.acme.org
      secretName: tls-secret-app-prod
  rules:
    - host: onify-citizen-test.acme.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onify-app
                port:
                  number: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onify-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - onify-citizen-test-api.acme.org
      secretName: tls-secret-api-prod
  rules:
    - host: onify-citizen-test-api.acme.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onify-api
                port:
                  number: 8181
